# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_hap("adminprovisioning_hap") {
  hap_profile = "entry/src/main/module.json"
  deps = [
    ":adminprovisioning_js_assets",
    ":adminprovisioning_resources",
  ]
  certificate_profile = "signature/adminprovisioning.p7b"
  hap_name = "adminprovisioning"
  subsystem_name = "applications"
  part_name = "prebuilt_hap"
  module_install_dir = "app/com.ohos.adminprovisioning"
}

ohos_js_assets("adminprovisioning_js_assets") {
  ets2abc = true
  source_dir = "entry/src/main/ets"
}

ohos_app_scope("adminprovisioning_app_profile") {
  app_profile = "AppScope/app.json"
  sources = [ "AppScope/resources" ]
}

ohos_resources("adminprovisioning_resources") {
  sources = [ "entry/src/main/resources" ]
  deps = [ ":adminprovisioning_app_profile" ]
  hap_profile = "entry/src/main/module.json"
}
