# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

declare_args() {
  auth_widget_enabled = true
}

ohos_app_scope("authwidget_app_profile") {
  app_profile = "./AppScope/app.json"
  sources = [ "./AppScope/resources" ]
}

ohos_js_assets("authwidget_js_assets") {
  ets2abc = true
  source_dir = "entry/src/main/ets"
}

ohos_resources("authwidget_resources") {
  sources = [ "entry/src/main/resources" ]
  deps = [ ":authwidget_app_profile" ]
  hap_profile = "entry/src/main/module.json"
}

ohos_hap("auth_widget") {
  hap_profile = "entry/src/main/module.json"
  deps = [
    ":authwidget_js_assets",
    ":authwidget_resources",
  ]
  certificate_profile = "signature/auth_widget.p7b"
  hap_name = "AuthWidget"
  subsystem_name = "applications"
  part_name = "auth_widget"
  module_install_dir = "app/com.ohos.useriam.authwidget"
}
